# fp-table-tracker

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: cron.yml
api/: Cargo.toml  client.js  fetch.js  fetch.rs  getByDateRange.js  getLatest.js
public/: index.html  mainstyle.css
src/: mainstyle.scss  routes.js
src/components/: LatestChart.svelte  Loading.svelte  Navbar.svelte  TodayChart.svelte  WeeklyChart.svelte
src/routes/: About.svelte  Home.svelte  Weekly.svelte
util/scanner/: requirements.txt  scrape.py
