[package]
name = "fw-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1"
vercel_lambda = "*"
ureq = "2.4.0"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]


[[bin]]
name = "fetch"
path = "fetch.rs"
