[package]
name = "fw-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vercel_runtime = "1.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
mongodb = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"


[[bin]]
name = "fetch"
path = "api/fetch.rs"
